# metadata-agent

./: .gcloudignore  .gitmodules  .travis.yml  Makefile.am  README.md  build.sh  clean.sh  configure.ac  version-gen.sh
pkg/: cloudbuild.yaml
pkg/deb/debian/: control.base  control.xenial  postinst  postrm  prerm  stackdriver-metadata.init
pkg/docker/: Dockerfile  Dockerfile-trusty  Dockerfile-xenial  docker-entrypoint.sh  entrypoint.sh
pkg/k8s/: Dockerfile
pkg/rpm/: stackdriver-metadata  stackdriver-metadata.spec
src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  agent.cc  agent.h  agent_config.cc  agent_config.h  api_server.cc  api_server.h  base64.cc  base64.h  config.h.in  configuration.cc  configuration.h  docker.cc  docker.h  environment.cc  environment.h  format.cc  format.h  health_checker.cc  health_checker.h  health_reporter.cc  health_reporter.h  http_common.h  instance.cc  instance.h  json.cc  json.h  kubernetes.cc  kubernetes.h  local_stream_delegate.cc  local_stream_delegate.hpp  local_stream_http.cc  local_stream_http.h  logging.cc  logging.h  measures.cc  measures.h  (+19 more)
src/asio/: local_resolve_op.hpp  local_resolver_service.hpp
src/http/: local_async_connection_base.hpp  local_async_connection_base.ipp  local_async_normal.hpp  local_client.hpp  local_connection_delegate.hpp  local_connection_delegate_factory.hpp  local_normal_delegate.hpp  local_normal_delegate.ipp  local_tags.hpp
src/http/traits/: local_resolver.hpp
src/internal/: measures_utils.cc  measures_utils.h
test/: .gitignore  Makefile  api_server_unittest.cc  base64_unittest.cc  configuration_unittest.cc  environment_unittest.cc  environment_util.h  fake_clock.cc  fake_clock.h  fake_http_server.cc  fake_http_server.h  format_unittest.cc  health_checker_unittest.cc  health_reporter_unittest.cc  instance_unittest.cc  json_unittest.cc  kubernetes_unittest.cc  logging_unittest.cc  metrics_unittest.cc  oauth2_unittest.cc  reporter_unittest.cc  resource_unittest.cc  store_unittest.cc  temp_file.h  time_unittest.cc  updater_unittest.cc  util_unittest.cc
test/internal/: measures_utils_unittest.cc
x86_64_centos7/: Dockerfile
x86_64_xenial/: Dockerfile
